_bk/blog.amoylabs.com/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog 
spec:
  ingressClassName: nginx
  rules:
  - host: blog.amoylabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog 
            port: 
              number: 8080
